Updated app.js with app.get()

--- a/views/help.ejs
+++ b/views/help.ejs
@@ -13,16 +13,16 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand">ScratchBot</a>
+				<a href="/index" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="/index">Home</a></li>
+				<li><a href="/about">About</a></li>
 				<li><a href="#">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="login.html">Login</a></li>
-				<li><a href="register.html">Signup</a></li>
+				<li><a href="/login">Login</a></li>
+				<li><a href="/register">Signup</a></li>
 			</ul>
 		</div>
 	</nav>
