--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,16 +17,16 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand">ScratchBot</a>
+				<a href="/index" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="index.ejs">Home</a></li>
-				<li><a href="about.ejs">About</a></li>
-				<li><a href="help.ejs">Help</a></li>
+				<li><a href="/index">Home</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/help">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="views/login.ejs">Login</a></li>
-				<li><a href="register.ejs">Signup</a></li>
+				<li><a href="/login">Login</a></li>
+				<li><a href="/register">Signup</a></li>
 			</ul>
 		</div>
 	</nav>
