--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,16 +11,16 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-                <a href="index.html" class="navbar-brand">ScratchBot</a>
+                <a href="/index" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="help.html">Help</a></li>
+				<li><a href="/index">Home</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/help">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Login</a></li>
-				<li><a href="register.html">Signup</a></li>
+				<li><a href="/register">Signup</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -30,7 +30,7 @@
         <div style="width: 30%; margin: 25px auto;">
             <h1>Login</h1>
 
-            <form action="/login" method="POST">
+            <form action="/login" method="POST"> <!--action needs to be changed here-->
                 <div class="form-group">
                     <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
