--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,15 +11,15 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="index.html" class="navbar-brand">ScratchBot</a>
+				<a href="/index" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="help.html">Help</a></li>
+				<li><a href="/index">Home</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/help">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="login.html">Login</a></li>
+				<li><a href="/login">Login</a></li>
 				<li><a href="#">Signup</a></li>
 			</ul>
 		</div>
