--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
 
 /* Reset */
 
-	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu,, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
 		border: 0;
@@ -18,7 +18,7 @@
 		vertical-align: baseline;
 	}
 
-	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	article, aside, details, figcaption, figure, footer, header, hgroup, menu,, section {
 		display: block;
 	}
 
@@ -2811,7 +2811,7 @@
 			top: 0;
 		}
 
-		#header nav {
+		#header {
 			height: inherit;
 			line-height: inherit;
 			position: absolute;
@@ -2820,20 +2820,20 @@
 			vertical-align: middle;
 		}
 
-			#header nav ul {
+			#header ul {
 				list-style: none;
 				margin: 0;
 				padding-left: 0;
 			}
 
-				#header nav ul li {
+				#header ul li {
 					border-radius: 4px;
 					display: inline-block;
 					margin-left: 2.5em;
 					padding-left: 0;
 				}
 
-					#header nav ul li a {
+					#header ul li a {
 						-moz-transition: color 0.2s ease-in-out;
 						-webkit-transition: color 0.2s ease-in-out;
 						-ms-transition: color 0.2s ease-in-out;
@@ -2843,15 +2843,15 @@
 						text-decoration: none;
 					}
 
-						#header nav ul li a:hover {
+						#header ul li a:hover {
 							color: #484848;
 						}
 
-					#header nav ul li:first-child {
+					#header ul li:first-child {
 						margin-left: 0;
 					}
 
-					#header nav ul li .button {
+					#header ul li .button {
 						border-color: rgba(144, 144, 144, 0.25);
 						box-shadow: none;
 						height: 3em;
@@ -2871,7 +2871,7 @@
 				left: 0;
 			}
 
-			#header .container nav {
+			#header .container {
 				right: 0;
 			}
 
@@ -2894,16 +2894,16 @@
 					color: #FFF;
 				}
 
-			#header.alt nav {
+			#header.alt {
 				right: 2em;
 				top: 2em;
 			}
 
-				#header.alt nav a {
+				#header.alt a {
 					color: #ddd;
 				}
 
-					#header.alt nav a:active, #header.alt nav a:hover {
+					#header.alt a:active, #header.alt a:hover {
 						color: #FFF;
 					}
 
@@ -2922,7 +2922,7 @@
 
 /* Menu */
 
-	.navPanelToggle {
+	PanelToggle {
 		text-decoration: none;
 		text-decoration: none;
 		height: 100%;
@@ -2933,7 +2933,7 @@
 		display: none;
 	}
 
-		.navPanelToggle:before {
+		PanelToggle:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
 			font-family: FontAwesome;
@@ -2944,13 +2944,13 @@
 
 		@media screen and (max-width: 980px) {
 
-			.navPanelToggle {
+			PanelToggle {
 				display: block;
 			}
 
 		}
 
-		.navPanelToggle *:before {
+		PanelToggle *:before {
 			background: rgba(144, 144, 144, 0.65);
 			border-radius: 4px;
 			color: #fff;
@@ -2965,7 +2965,7 @@
 			width: 3.5em;
 		}
 
-	#navPanel {
+	Panel {
 		-moz-transform: translateX(-20em);
 		-webkit-transform: translateX(-20em);
 		-ms-transform: translateX(-20em);
@@ -2989,22 +2989,22 @@
 		text-transform: uppercase;
 	}
 
-		#navPanel ul {
+		Panel ul {
 			list-style: none;
 			margin: 0;
 			padding: 0;
 		}
 
-			#navPanel ul li {
+			Panel ul li {
 				padding: 0;
 			}
 
-				#navPanel ul li:first-child a:not(.button), #navPanel ul li:first-child span:not(.button) {
+				Panel ul li:first-child a:not(.button), Panel ul li:first-child span:not(.button) {
 					border-top: 0;
 				}
 
-				#navPanel ul li a:not(.button),
-				#navPanel ul li span:not(.button) {
+				Panel ul li a:not(.button),
+				Panel ul li span:not(.button) {
 					border-top: solid 1px #555;
 					color: #fff;
 					display: block;
@@ -3012,11 +3012,11 @@
 					text-decoration: none;
 				}
 
-		#navPanel .button {
+		Panel .button {
 			width: 100%;
 		}
 
-		#navPanel .close {
+		Panel .close {
 			text-decoration: none;
 			-moz-transition: color 0.2s ease-in-out;
 			-webkit-transition: color 0.2s ease-in-out;
@@ -3037,7 +3037,7 @@
 			width: 5em;
 		}
 
-			#navPanel .close:before {
+			Panel .close:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
 				font-family: FontAwesome;
@@ -3046,7 +3046,7 @@
 				text-transform: none !important;
 			}
 
-			#navPanel .close:before {
+			Panel .close:before {
 				content: '\f00d';
 				width: 3em;
 				height: 3em;
@@ -3058,20 +3058,20 @@
 				text-align: center;
 			}
 
-			#navPanel .close:hover {
+			Panel .close:hover {
 				color: inherit;
 			}
 
 			@media screen and (max-width: 736px) {
 
-				#navPanel .close {
+				Panel .close {
 					height: 4em;
 					line-height: 4em;
 				}
 
 			}
 
-		#navPanel.visible {
+		Panel.visible {
 			-moz-transform: translateX(0);
 			-webkit-transform: translateX(0);
 			-ms-transform: translateX(0);
